# d-engine

./: .cargo-release.toml  .claudeignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MIGRATION_GUIDE.md  Makefile  README.md  SECURITY.md  buf.yaml  build.rs  cliff.toml  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
benches/d-engine-bench/: Cargo.toml  Makefile  README.md  rustfmt.toml
benches/d-engine-bench/docker/: Dockerfile  README.md  soak-test.sh
benches/d-engine-bench/src/: main.rs
benchmark/: Cargo.toml  README.md
benchmark/src/: command_line.rs  lib.rs  main.rs
d-engine/: Cargo.toml
d-engine-client/: Cargo.toml  README.md
d-engine-client/src/: builder.rs  client_extensions.rs  cluster.rs  cluster_test.rs  config.rs  error.rs  error_test.rs  grpc_client.rs  grpc_client_test.rs  grpc_kv_client.rs  grpc_kv_test.rs  kv.rs  kv_client.rs  kv_error.rs  kv_test.rs  lib.rs  mock_rpc.rs  mock_rpc_service.rs  pool.rs  pool_test.rs  scoped_timer.rs  utils.rs  utils_test.rs
d-engine-client/src/proto/: client_ext.rs  client_ext_test.rs  mod.rs
d-engine-core/: Cargo.toml  README.md
d-engine-core/benches/: leader_state_bench.rs
d-engine-core/src/: cluster_proto_extension.rs  command.rs  command_test.rs  errors.rs  errors_test.rs  event.rs  kv_client.rs  lib.rs  maybe_clone_oneshot.rs  maybe_clone_oneshot_test.rs  membership.rs  mock_type_config.rs  raft.rs  raft_context.rs  raft_test.rs  read_actor.rs  read_actor_test.rs
d-engine-core/src/client/: client_api.rs  client_api_error.rs  client_api_error_test.rs  mod.rs  types.rs  types_test.rs
d-engine-core/src/commit_handler/: default_commit_handler.rs  default_commit_handler_test.rs  mod.rs
d-engine-core/src/config/: cluster.rs  config_test.rs  lease.rs  lease_test.rs  mod.rs  network.rs  network_test.rs  raft.rs  raft_test.rs  retry.rs  storage.rs  tls.rs  tls_test.rs
d-engine-core/src/election/: election_handler.rs  election_handler_test.rs  mod.rs
d-engine-core/src/network/: background_snapshot_transfer.rs  background_snapshot_transfer_test.rs  backgroup_snapshot_transfer.rs  backgroup_snapshot_transfer_test.rs  mod.rs
d-engine-core/src/purge/: default_executor.rs  default_executor_test.rs  mod.rs
d-engine-core/src/raft_role/: candidate_state.rs  candidate_state_test.rs  follower_state.rs  follower_state_test.rs  leader_state.rs  leader_state_linearizable_read_test.rs  leader_state_test.rs  learner_state.rs  learner_state_test.rs  mod.rs  raft_role_test.rs  read_lease.rs  read_lease_test.rs  role_state.rs
d-engine-core/src/raft_test/: mod.rs  (+8 more)
d-engine-docs/: Cargo.toml
d-engine-docs/src/: lib.rs
d-engine-proto/: .gitignore  Cargo.toml  Makefile  README.md  build.rs
d-engine-proto/go/: go.mod  go.sum
d-engine-proto/proto/: common.proto  error.proto
d-engine-proto/src/: lib.rs
d-engine-runtime/: Cargo.toml
d-engine-runtime/src/: lib.rs
d-engine-runtime/tests/: integration_test.rs
d-engine-server/: Cargo.toml  README.md
d-engine-server/benches/: README.md  file_log_store.rs  lease_performance.rs  state_machine.rs  ttl.rs  watch_overhead.rs
d-engine-server/src/: lib.rs  proto_convert.rs  proto_convert_test.rs  read_actor.rs  read_actor_test.rs
d-engine-server/tests/: embedded_watch_test.rs  grpc_watch_test.rs  integration_test.rs  local_kv_client_integration_test.rs  watch_integration_test.rs  watch_performance_gate.rs
d-engine-test-utils/: Cargo.toml
d-engine-test-utils/src/: common.rs  entry_builder.rs
d-engine/src/: lib.rs
docs/: Cargo.toml
examples/client-usage-standalone/: Cargo.toml  README.md
examples/client_usage/: .gitignore  Cargo.toml  README.md
examples/quick-start/: .gitignore  Cargo.toml  Makefile  README.md
examples/quick-start-embedded/: Cargo.toml  Makefile  README.md  d-engine.toml
examples/rocksdb-cluster/: Cargo.toml  Makefile
examples/service-discovery-embedded/: Cargo.toml  Makefile  README.md  d-engine.toml  server.rs
examples/service-discovery-standalone/: Cargo.toml  Makefile  README.md  admin.rs  watcher.rs
examples/sled-cluster/: Cargo.toml  Makefile
examples/three-nodes-cluster/: .gitignore  Cargo.toml  Makefile  README.md
examples/three-nodes-embedded/: .gitignore  Cargo.toml  Makefile  README.md
examples/three-nodes-rocketdb-cluster/: Cargo.toml  start-cluster.sh
src/: Cargo.toml  constants.rs  errors.rs  lib.rs  main.rs  type_config.rs
src/client/: apis.rs  builder.rs  channel_pool.rs  client.rs  client_config.rs  client_pool.rs  cluster.rs  cluster_test.rs  config.rs  error.rs  kv.rs  kv_test.rs  mod.rs  new_client.rs  pool.rs  pool_test.rs
src/config/: cluster.rs  config_test.rs  mod.rs  monitoring.rs  network.rs  network_test.rs  raft.rs  raft_test.rs  retry.rs  tls.rs  tls_test.rs
src/core/: event.rs  event_test.rs  mod.rs  raft.rs  raft_context.rs  raft_test.rs
src/docs/: mod.rs  overview.md
src/membership/: health_checker.rs  health_checker_test.rs  health_monitor_test.rs  membership_guard.rs  membership_guard_test.rs  mod.rs  raft_membership.rs  raft_membership_test.rs  rpc_peer_channels.rs  rpc_peer_channels_test.rs
src/metrics/: metrics_test.rs  mod.rs
src/network/: connection_cache.rs  connection_cache_test.rs  health_checker.rs  health_checker_test.rs  health_monitor.rs  health_monitor_test.rs  mod.rs  network_test.rs
src/node/: builder.rs  builder_test.rs  errors.rs  mod.rs  node.rs  node_test.rs  settings.rs
src/proto/: client_extensions.rs  mod.rs
src/snapshot/: mod.rs  policy.rs
src/storage/: buffered_raft_log.rs  buffered_raft_log_test.rs  mod.rs  raft_log.rs  snapshot.rs  snapshot_path_manager.rs  state_machine.rs  state_machine_test.rs  state_storage.rs  storage_engine.rs  storage_engine_test.rs  storage_test.rs
src/test_utils/: common.rs  entry_builder.rs  mock_type_config.rs  mod.rs
src/utils/: async_task.rs  async_task_test.rs  cluster.rs  convert.rs  convert_test.rs  file_io.rs  file_io_test.rs  mod.rs  net.rs  net_test.rs  network.rs  scoped_timer.rs  stream.rs  stream_test.rs  time.rs  time_test.rs  util.rs  utils_test.rs
(+809 files in other folders)
