[workspace]
members = [
  "d-engine",
  "d-engine-proto",
  "d-engine-core",
  "d-engine-client",
  "d-engine-server"
]

exclude = [
  "docs",
  "examples/client_usage",
  "examples/sled-cluster",
  "examples/three-nodes-cluster",
  "examples/single-node-expansion",
  "examples/quick-start",
  "examples/quick-start-embedded",
  "examples/service-discovery-standalone",
  "examples/service-discovery-embedded",
  "benches/d-engine-bench",
]

resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2024"
authors = ["Joshua Chi <joshokn@gmail.com>"]
homepage = "https://github.com/deventlab/d-engine"
repository = "https://github.com/deventlab/d-engine"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
d-engine-proto = { path = "./d-engine-proto", version = "0.2.1" }
d-engine-core = { path = "./d-engine-core", version = "0.2.1" }
d-engine-client = { path = "./d-engine-client", version = "0.2.1" }
d-engine-server = { path = "./d-engine-server", version = "0.2.1" }

tokio = { version = "1", features = [
    "macros",
    "time",
    "signal",
    "fs",
    "sync",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
prost = { version = "0.13", default-features = false }
bincode = "1.3"
tonic = { version = "0.12.3", features = ["gzip", "tls"] }
tonic-health = "0.12.3"
bytes =  { version = "1.10", features = ["serde"] }
tracing = { version = "0.1.41" }
futures = "0.3.30"
rand = "0.8.5"
tempfile = "3.19.1"

[profile.dev]
opt-level = 1      # Main code is low-optimized to speed up compilation
incremental = true # Enable incremental compilation (enabled by default, requires confirmation)
codegen-units = 16 # Appropriately reduce parallel units to reduce memory usage
lto = false

[profile.dev.package."*"]
opt-level = 3 # All dependency optimization levels

[profile.release]
incremental = true
debug = false
# opt-level = 3
opt-level = 'z'        # Optimized for minimum size
overflow-checks = true
lto = true             # Eliminate redundant code and reduce size
codegen-units = 1      # Reduce parallel code generation units to improve optimization effect


[profile.test]
incremental = true
codegen-units = 16           # Take advantage of machine multi-core
split-debuginfo = "unpacked" # macOS-specific optimization
debug = 1                    # Reduce debug information

[profile.test.build-override]
opt-level = 3 # Full optimization of dependencies

[workspace.metadata.release]
# Use unified v{version} format for tags
tag-name = "v{{version}}"
# Create workspace-level unified tag
tag = true
# Synchronize versions across workspace members
shared-version = true
# Ensure clean git working tree before release
allow-branch = ["main", "release/*"]
# Auto push tags and commits
push = true
