[package]
name = "d-engine-client"
version = "0.2.0"
edition = "2024"

[dependencies]
d-engine-proto = { workspace = true }

tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
bytes =  { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
arc-swap = "1.7.1"
futures = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
mockall = "0.12.1"
tracing-test = "0.2"
