[package]
name = "d-engine-client"
version = "0.2.0"
edition = "2024"
authors = ["Joshua Chi <joshokn@gmail.com>"]
description = "Client library for connecting to d-engine Raft consensus servers"
homepage = "https://github.com/deventlab/d-engine"
repository = "https://github.com/deventlab/d-engine"
license = "MIT OR Apache-2.0"
keywords = ["raft", "consensus", "client", "async"]
categories = ["asynchronous", "network-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
d-engine-proto = { workspace = true }

tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
bytes =  { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
arc-swap = "1.7.1"
futures = { workspace = true }
tokio-stream = "0.1.16"

[dev-dependencies]
mockall = "0.12.1"
tracing-test = "0.2"
