[package]
name = "d-engine-core"
version = "0.1.0"
edition = "2024"

[dependencies]
d-engine-proto = { workspace = true }

tokio = { workspace = true }
tonic = { workspace = true }
bytes =  { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
prost = { workspace = true }
bincode = "1.3"
thiserror = "1.0"
nanoid = "0.4.0"
# using Dashset
dashmap = "5.5.3"
tempfile = "3.19.1"
metrics = { version = "0.24", features = [] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
tokio-stream = "0.1.16"
# Packing/unpacking TAR archives
tokio-tar = "0.3"

[dev-dependencies]
mockall = "0.12.1"
tracing-test = "0.2"
serial_test = "3.2.0"
temp-env = "0.3.6"
