[package]
name = "d-engine-docs"
version = "0.2.0"
edition = "2024"
authors = ["Joshua Chi <joshokn@gmail.com>"]
description = "Documentation and guides for d-engine Raft consensus engine"
homepage = "https://github.com/deventlab/d-engine"
repository = "https://github.com/deventlab/d-engine"
license = "MIT OR Apache-2.0"
keywords = ["raft", "consensus", "documentation"]
categories = ["documentation"]
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
d-engine-server = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
