[package]
name = "d-engine-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "gRPC protocol definitions - for building non-Rust d-engine clients"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["raft", "protobuf", "grpc"]
categories = ["encoding", "network-programming"]
publish = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# prost = { workspace = true }
prost = { version = "0.13", features = ["derive"] }
tonic = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }


[build-dependencies]
tonic-build = "0.12"
vergen = { version = "8.1", features = ["git", "gitcl"] }
