[package]
name = "d-engine-server"
version = "0.2.0"
edition = "2024"

[dependencies]
d-engine-proto = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
rocksdb = { version = "0.24.0", optional = true }
config = { version = "0.14.0", default-features = false, features = ["toml"] }

[dev-dependencies]
serial_test = "3.2.0"
temp-env = "0.3.6"
