[package]
name = "d-engine-server"
version = "0.2.0"
edition = "2024"

[dependencies]
d-engine-proto = { workspace = true }
d-engine-core = { workspace = true }

tokio = { workspace = true }
tonic = { workspace = true }
bytes =  { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }

rocksdb = { version = "0.24.0", optional = true }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
arc-swap = "1.7.1"
dashmap = "5.5.3"
# use tokio_util::sync::CancellationToken;
tokio-util = "0.7.11"

# certification
rcgen = { version = "0.13", features = ["pem"] }

[dev-dependencies]
serial_test = "3.2.0"
temp-env = "0.3.6"

tracing-test = "0.2"
tonic-health = "0.12.3"
tokio-stream = "0.1.16"
