[package]
name = "d-engine-server"
version = "0.2.0"
edition = "2024"

[features]
test-utils = ["mockall", "tokio-tar", "async-compression", "nanoid"]

[dependencies]
d-engine-proto = { workspace = true }
d-engine-core = { workspace = true }

tokio = { workspace = true }
tonic = { workspace = true }
bytes =  { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
bincode = "1.3"
rocksdb = { version = "0.24.0", optional = true }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
arc-swap = "1.7.1"
dashmap = "5.5.3"
# use tokio_util::sync::CancellationToken;
tokio-util = "0.7.11"
tokio-stream = "0.1.16"
# certification
rcgen = { version = "0.13", features = ["pem"] }
crc32fast = "1.4.2"
# used in stream
http-body = "1.0"
http-body-util = "0.1.3"
tonic-health = "0.12.3"
parking_lot = "0.12.3"
crossbeam = "0.8"
crossbeam-skiplist = "0.1"
mockall = { version = "0.12.1", optional = true }
nanoid = { version = "0.4.0", optional = true }
tokio-tar = { version = "0.3", optional = true }
async-compression = { version = "0.4", features = ["tokio", "gzip"], optional = true}

metrics = { version = "0.24", features = [] }


[dev-dependencies]
d-engine-server = { workspace = true, features = ["test-utils"] }
d-engine-core = { workspace = true, features = ["test-utils"] }
serial_test = "3.2.0"
temp-env = "0.3.6"
tracing-test = "0.2"
tokio-stream = "0.1.16"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["test-util", "process"] }
