[package]
name = "d-engine-test-utils"
version = "0.2.0"
edition = "2021"

[dependencies]
d-engine-proto = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }
tempfile = { workspace = true }
prost = { workspace = true }
async-compression = { workspace = true }
tokio-stream = { workspace = true }
tokio-tar = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
crc32fast = { workspace = true }
