[package]
name = "d-engine"
version = "0.2.0"
edition = "2024"
authors = ["Joshua Chi <joshokn@gmail.com>"]
description = "A lightweight distributed coordination engine for Rust applications—the consensus layer for building reliable distributed systems."
homepage = "https://github.com/deventlab/d-engine"
repository = "https://github.com/deventlab/d-engine"
license = "MIT OR Apache-2.0"
keywords = [
    "raft",
    "consensus",
    "distributed-systems",
    "storage",
    "fault-tolerance",
]
categories = ["concurrency", "asynchronous", "algorithms", "database"]
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["server", "rocksdb"]
client = ["dep:d-engine-client"]
server = ["dep:d-engine-server"]
rocksdb = ["server", "d-engine-server/rocksdb"]
watch = ["server", "d-engine-server/watch"]

[dependencies]
d-engine-client = { workspace = true, optional = true }
d-engine-server = { workspace = true, optional = true }

# No dev-dependencies needed - d-engine is a pure re-export wrapper
# All tests are in d-engine-server/tests/
