[package]
name = "d-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Lightweight Raft consensus engine - recommended entry point for most users"
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
keywords = [
    "raft",
    "consensus",
    "distributed-systems",
    "storage",
    "fault-tolerance",
]
categories = ["concurrency", "asynchronous", "algorithms", "database"]
readme = "../README.md"

[package.metadata.docs.rs]
# Enable all user-facing features (default already includes server + rocksdb)
features = ["client", "server", "rocksdb", "watch"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
# Disable individual crate tags, use workspace-level tag only
tag = false

[features]
default = ["server", "rocksdb"]
client = ["dep:d-engine-client"]
server = ["dep:d-engine-server"]
rocksdb = ["server", "d-engine-server/rocksdb"]
watch = ["server", "d-engine-server/watch"]
# Enables `d_engine::state_machine_test` and `d_engine::storage_engine_test`.
# Add to `[dev-dependencies]` when implementing and testing custom state machines or storage engines.
__test_support = ["server", "d-engine-server/__test_support"]

[lib]
# d-engine is a pure re-export wrapper — doc examples use tokio + feature-gated types
# that are not available in the default doctest context. Real compilation verification
# is provided by examples/ (compiled via `check-examples` in CI).
doctest = false

[dependencies]
d-engine-client = { workspace = true, optional = true }
d-engine-server = { workspace = true, optional = true }

# No dev-dependencies needed - d-engine is a pure re-export wrapper
# All tests are in d-engine-server/tests/
