[package]
name = "step"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [] # No features are enabled by default

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
prost = { version = "0.13", default-features = false }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Async
tokio = { version = "1.41", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
    "fs",
] }
futures = "0.3.30"

# compress
flate2 = { version = "1.0", default-features = false, features = ["zlib"] }

# log
log = "0.4.20"

# DB
sled = { version = "0.34.7", features = [
    "compression",
], default-features = false }

# network
tonic = { version = "0.12", features = ["gzip", "tls"] }
tonic-health = "0.12.3"


# im = { version = "15.1", default-features = false }
prometheus = { version = "0.13", default-features = false }
rcgen = { version = "0.11", features = ["pem"] }
autometrics = { version = "1.0.1", features = ["prometheus-exporter"] }

rand = "0.8.5"
# dashmap = "5.5.3"
thiserror = "1.0"
parking_lot = "0.12.3"
config = "0.14.0"
nanoid = "0.4.0"
sysinfo = "0.24"
lazy_static = "1.4"
chrono = "0.4.38"
tokio-util = "0.7.11"
warp = "0.3.7"
nix = { version = "0.29", features = ["signal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
crossbeam = "0.8.4"

[dev-dependencies]
once_cell = "1.20.2"
tokio-console = "0.1.13"
console-subscriber = "0.4.1"
mockall = "0.12.1"
criterion = "0.3"
jemallocator = "0.3.2"
tracing-test = "0.2.5"
cargo-tarpaulin = "0.18"
tokio-stream = "0.1.16"
env_logger = "0.11.6"

[build-dependencies]
tonic-build = "0.12"
vergen = { version = "8.1", features = ["git", "gitcl"] }

# [[bench]]
# name = "bench"
# harness = false

[profile.dev]
incremental = true

[profile.release]
incremental = true
debug = true
opt-level = 3
overflow-checks = true
