[package]
name = "d-engine-bench"
version = "0.1.4"
edition = "2021"

[dependencies]
d-engine-client = { path = "../../d-engine-client" }
d-engine-proto = { path = "../../d-engine-proto" }
# d-engine = { git = "https://github.com/deventlab/d-engine.git", branch = "feature/79-snapshot" }

tokio = { version = "1.44", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
rand = { version = "0.8", features = ["small_rng"] }
hdrhistogram = "7.5"
atomic-shim = "0.2.0"
bytes = "1.10"
futures = "0.3"
thiserror = "1.0"
