[package]
name = "d-engine-bench"
version = "0.2.0"
edition = "2024"

[dependencies]
d-engine-client = { path = "../../d-engine-client" }


tokio = { version = "1.44", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
rand = { version = "0.8", features = ["small_rng"] }
hdrhistogram = "7.5"
atomic-shim = "0.2.0"
bytes = "1.10"
futures = "0.3"
thiserror = "1.0"
