[package]
name = "client-usage-standalone-demo"
version = "0.2.0"
edition = "2024"

[dependencies]
d-engine = { path = "../../d-engine", features = ["client"], default-features = false }

clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0"

[profile.dev]
incremental = true
