[package]
name = "dengine-client-demo"
version = "0.2.0"
edition = "2021"

[dependencies]
d-engine-client = { path = "../../d-engine-client" }

clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
env_logger = "0.9.0"
anyhow = "1.0"

[profile.dev]
incremental = true
