[package]
name = "quick-start"
version = "0.2.0"
edition = "2024"

[dependencies]
d-engine = { path = "../../d-engine" }

tokio = { version = "1", features = ["rt-multi-thread", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[[bin]]
name = "quick-start"
path = "src/main.rs"
