[package]
name = "rocksdb-demo"
version = "0.1.3"
edition = "2021"

[dependencies]
# d-engine = "0.1.1"
d-engine = { path = "../../../d-engine", features = ["rocksdb"] }
# d-engine = { git = "https://github.com/deventlab/d-engine.git", branch = "feature/79-snapshot" }

bytes = "1.10"
prost = { version = "0.13", default-features = false }
metrics-exporter-prometheus = "0.17.2"
tokio = { version = "1.4", features = ["rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
async-trait = "0.1.89"
bincode = "2.0.1"
